забирає лишній закриваючий тег і перейменовує img

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-second"></span>
-                Studio</span></a>
+            <a href="./index.html" class="logo"><span class="logo-first">Web</span><span class="logo-second">
+                    Studio</span></a>
             <!--меню навігації-->
             <ul class="site-nav">
                 <li><a href="./index.html" class="link current">Студия</a></li>
@@ -208,7 +208,7 @@
         <section>
             <h3 class="fotter-network">Подпишитесь на рассылку</h3>
             <a href="" class="button">Подписаться</a>
-            <img src="./images/icon send.svg" alt="іконка листа" width="24" height="24">
+            <img src="./images/iconsend.svg" alt="іконка листа" width="24" height="24">
         </section>
         <p class="footer-law">2020 | Developed by GoIT Students</p>
 
